projects/mario-pest-control/style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans');

* {
  box-sizing: border-box;
}

html {
  height: 100%;
  width: 100%;
}

body {
  border: none;
  height: 100%;
  margin: 50px 0 0 0;
  padding: 0;
  width: 100%;
  font-size: 16px;
  font-family: 'Open Sans', sans-serif;
}

.header-main {
  background-color: #DB4814;
  box-shadow: inset 2px 2px 0 #E3B8C5, inset -2px -2px 0 #050306;
  color: #FFC2B9;
  display: grid;
  grid-template-columns: 50px 1fr;
  background-color: ;
  height: 50px;
  position: fixed;
  width: 100%;
  top: 0;
}

.header-main::before, .header-main::after {
  background: #FFC2B9;
  box-shadow: 2px 2px 0 #050505;
  content: '';
  height: 4px;
  position: absolute;
  width: 4px;
}

.header-main::before {
  bottom: 7px;
  left: 6px;
}

.header-main::after {
  bottom: 7px;
  right: 6px;
}

.main-content {
  padding-top: 30px;
  background-color: #6A94FB;
  background-image: url("./assets/block.png");
  background-repeat: repeat no-repeat;
  background-size: 40px;
  background-position-y: 100%;
  padding-bottom: 40px;
}

.logo-wrap {
  max-width: 50px;
  max-height: 50px;
  grid-column: 1/1;
}

.logo {
  max-width: 100%;
  max-height: 100%;
}

.company-title {
  align-items: center;
  display: flex;
  font-size: 1.5em;
  font-weight: 900;
  grid-column: 2;
  text-shadow: 2px 3px 0 #050505, 1px 3px 0 #050505;
  text-transform: uppercase;
  top: -2px;
}

.baddie-ul {
  list-style: none;
  padding: 0;
}

.baddie-li {
  display: flex;
  justify-content: center;
  align-items: center;
}

.baddie-name {
  text-align: center;
  width: 100%;
  border-top: 1px solid #aaa;
  margin-top: 0.625em;
  display: inline-block;
}

.baddie-cost {
  display: flex;
  margin-bottom: 1.25em;
}

.baddie-price::after {
  content: ':';
  margin-right: 5px;
}

.baddie-name {
  font-size: 1.25em;
}

.baddie-img {
  max-width: 200px;
  max-height: 200px;
}

.baddie-totals {
  display: flex;
  font-size: 1.25em;
  justify-content: center;
  margin-bottom: 1.25em;
}

.baddie-total-label{
  font-weight: 800;
}

.baddie-total-result {
  border-bottom: 1px solid #aaa;
  min-width: 150px;
  text-align: center;
}

.footer-main {
  /* grid-row: 3; */
  align-items: center;
  background-color: #E1441F;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  padding-top: 1.25em;
  width: 100vw;
}

.footer-main a {
  color: #fff;
}

.footer-info-li {
  padding: 1.25em 0;
}

.footer-info-li.footer-address {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

@media screen and (max-width: 599px) {
  .main-content {
    display: flex;
    flex-direction: column;
    padding-top: 30px;
  }
  .company-title {
    padding-left: 15px;
  }
  
  .baddie-li {
    flex-direction: column;
    margin-bottom: 1.25em;
  }
  
  .baddie-info {
    padding-top: 0.625em;
  }
}

@media screen and (min-width: 600px) {
  .header-main {
    grid-template-columns: 50px 1fr 50px;
  }
  
  .company-title {
    justify-content: center;
  }
  
  .baddie-li {
    flex-direction: row-reverse;
    margin-bottom: 1em;
  }
  
  .baddie-img-wrap {
    min-width: 210px;
    display: flex;
    justify-content: center;
  }
  
  .baddie-info {
    min-width: 210px;
  }
  
  .baddie-price {
    min-width: 75px;
    text-align: right;
  }
  
  .footer-info-li.footer-address {
    display: flex;
    align-items: center;
  }
  
}



@media screen and (min-width: 900px) {}
@media screen and (min-width: 1200px) {}
@media screen and (min-width: 1800px) {}

